fixed filters not showing

--- a/playground/styles.scss
+++ b/playground/styles.scss
@@ -1,4 +1,5 @@
 @use '~@angular/material' as mat;
+@use '~@firestitch/style/styles' as fs-style;
 @import './~@firestitch/component-tools/assets/playground.scss';
 @import "~dragula/dist/dragula.css";
 @import "~@firestitch/message/styles";
@@ -11,6 +12,9 @@
 @import "~@firestitch/selection/styles";
 @import '~@firestitch/scrollbar/styles';
 @import "../src/app/styles";
+
+
+@include fs-style.core();
 
 @include fs-drawer(mat.$blue-palette);
 @include fs-selection(mat.$blue-palette);
