--- a/src/app/components/gallery/gallery.component.scss
+++ b/src/app/components/gallery/gallery.component.scss
@@ -1,6 +1,6 @@
 :host ::ng-deep {
   .fs-filter {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: none;
 
     fs-filter-action-button {
